--- a/src/app/pages/our-studio/our-studio.component.html
+++ b/src/app/pages/our-studio/our-studio.component.html
@@ -48,8 +48,8 @@
           </div>
           <div class="col-lg-7">
             <div class="text">
-              <p>Our mission is to INSPIRE each individual and instill an appreciation and love for the beautiful art of DANCE as well as the joy of PERFORMANCE. Voted ‘Best of Clark County 2016’ and CONVENIENTLY located in Salmon Creek, </p>
-              <p>Dance Fusion SPECIALIZES in Ballet, Tap, Jazz, Contemporary, Hip Hop, Lyrical, Theater, Acro and Fitness for ages 3 to ageless!</p>
+              <p>Our mission is to inspire each individual and instill an appreaciation and love for the beautiful art of DANCE as well as the joy of performance. </p>
+              <p>Siddhi Nrityakala Mandir specialises in KATHAK which is an ancient classical dance form. SNM mentors not only prepare students technically to excel the prestigious Akhil Bhartiya Gandharva Mahavidyala examinations but also prepare them for various competitions and programs.</p>
             </div>
           </div>
         </div>
