--- a/src/app/pages/payment/payment.component.html
+++ b/src/app/pages/payment/payment.component.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="payment_mode">
         <h2 class="title">G-payment</h2>
-        <img src='../../../assets/images/download.png' alt="" srcset="">
+        <img height="100%" width="50%" src='../../../assets/images/payment.jpeg' alt="" srcset="">
       </div>
     </div>
   </div>
