--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -24,23 +24,22 @@
             <a href="index.html" class="logo"><img style="height: 50px;" src='../../../../assets/images/logo/logo1.svg' alt=""></a>
             <p>Join Dancers Around The World Learning On SNM, Start Improving your dance skills today. </p>
             <ul>
-              <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-              <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.facebook.com/SiddhiNrityakala/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.youtube.com/channel/UCH_xxYdFQLuJIf-HhZzSfPg"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>              
+              <li><a href="https://instagram.com/siddhi_nrityakala_mandir?utm_medium=copy_link"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
             </ul>
           </div>
           <div class="col-xl-3 col-lg-3 col-sm-6 col-12 footer-news">
             <h5 class="title">Latest News</h5>
             <ul>
               <li>
-                <a href="blog-details.html">Discover systematic ways to develop</a>
-                <div class="date">21 August, 2018 / Business</div>
+                <a href="blog-details.html">Upcoming Event - Guru Pournima</a>
+                <div class="date">23 JULY 2021 </div>
               </li>
-              <li>
-                <a href="blog-details.html">Install our mobile app on a smartphone</a>
-                <div class="date">21 August, 2018 / Business</div>
-              </li>
+              <!-- <li>
+                <a href="blog-details.html">Check our WebSite</a>
+                <div class="date">23 JULY 2021</div>
+              </li> -->
             </ul>
           </div>
           <div class="col-lg-2 col-sm-6 col-12 footer-list">
@@ -66,7 +65,7 @@
     </div>
     <div class="bottom-footer">
       <div class="container">
-        <p>Copyrights 2018 © Unifytheme</p>
+        <p>Copyrights 2021 © yezman.com</p>
       </div>
     </div>
   </footer>
