--- a/src/app/pages/faculty/faculty.component.css
+++ b/src/app/pages/faculty/faculty.component.css
@@ -7,3 +7,7 @@
 .our-team .main-content .single-team-member .text  {
     background: #f1bd6a85 !important;
 }
+
+.theme-inner-banner {
+    height: 50rem !important;
+}
