--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -97,10 +97,28 @@
         <div class="inner-container right-content">
           <div class="wrapper">
             <div class="theme-title-one">
-              <h6 class="upper-title">Natraj Murti</h6>
+              <h3 class="upper-title">Kathak</h3>
               <!-- <h2 class="main-title">Join A Global Dance Community</h2> -->
             </div>
-            <p class="h5">Nataraja (Sanskrit: नटराज, romanized: Naṭarāja), is a depiction of the Hindu god Shiva as the divine cosmic dancer. His dance is called Tandavam or Nadanta, depending on the context of the dance.The pose and artwork is described in many Hindu texts such as the Anshumadbhed agama and Uttarakamika agama, the dance relief or idol featured in all major Hindu temples of Shaivism.</p>
+            <p class="h5">The classical Indian dance form of Kathak originated in the northern regions of the country
+              and is narrative in nature. The term 'Kathak' has been derived form the Sanskrit word 'Katha', which means
+              a story. “Katha kahe so Kathak kahalave”
+            </p><br>
+            <p class="h5">
+              “Kathak” literally means a storyteller. Kathaka is the name of the community of musicians and dancers.
+              These Kathakas wandered around the countryside narrating the mythological stories to the people through
+              dance, music and poetry; all these arts are very closely associated with each other. This act of
+              storytelling further established as an art form, which popularized as ‘Kathak.
+            </p><br>
+            <p class="h5"> Swift Pirouettes (Bhramaris), Vigorous footwork (Padanyas), elegant stances (Thaat), Graceful Gatnikas,
+              Descriptive Gatbhavas and innovative use of bhav in abhinaya characterize Kathak. The sharp yet fluid
+              movements synchronised with deft and brisk spins, unleashes a visual splendour onstage taking audiences on
+              a spiritual journey.
+            </p><br>
+            <p class="h5">
+              Vandana, Utaan, Thaat, Amad, Tode-tukade, Kavitta, Tihaai, Paran, Chakkardar, Gatnikas, Gatbhava, Tatkar,
+              Thumaries, Bhajans, Kajari, Hori, Tarana, Tilwat, Chaturang, Drupad, Ashtapadis are the components of
+              Kathak.</p>
           </div>
         </div>
       </div>
@@ -125,7 +143,7 @@
                   <div class="col-sm-6">
                     <div class="single-counter-box">
                       <h2 class="number"><span class="timer" data-from="0" data-to="20" data-speed="1200"
-                          data-refresh-interval="5">4</span>+</h2>
+                          data-refresh-interval="5">15</span>+</h2>
                       <p>Certified Trainer</p>
                     </div>
                   </div>
@@ -140,14 +158,14 @@
                     <div class="single-counter-box">
                       <h2 class="number"><span class="timer" data-from="0" data-to="150" data-speed="1200"
                           data-refresh-interval="5">100</span>+</h2>
-                      <p>Time Award Winner</p>
+                      <p>Awards Winner</p>
                     </div>
                   </div>
                   <div class="col-sm-6">
                     <div class="single-counter-box">
                       <h2 class="number"><span class="timer" data-from="0" data-to="280" data-speed="1200"
-                          data-refresh-interval="5">10</span>+</h2>
-                      <p>Features added</p>
+                          data-refresh-interval="5">100</span>+</h2>
+                      <p>Performances</p>
                     </div>
                   </div>
                 </div>
@@ -160,15 +178,20 @@
                   <div class="col-sm-6 strategy-block">
                     <div>
                       <div class="icon"><i class="flaticon-007-ballet"></i></div>
-                      <h6>Dance Schedule</h6>
-                      <p>Find out what's happening by viewing our full schedule of classes.</p>
+                      <!-- <h6>Dance Schedule</h6> -->
+                      <p>The word Nataraja is a Sanskrit term, 
+                        from 'Nata' meaning act, drama, dance and 'Raja' meaning king, lord.
+                        It can be roughly translated as Lord of dance or King of dance.</p>
                     </div>
                   </div>
                   <div class="col-sm-6 strategy-block">
                     <div>
                       <div class="icon"><i class="flaticon-008-ballet-1"></i></div>
-                      <h6>Professional dance</h6>
-                      <p>Find out what's happening by viewing our full schedule of classes.</p>
+                      <!-- <h6>Professional dance</h6> -->
+                      <p>With the rythm of the ghungroos 
+                        And the beat of the music
+                        A dancer can spiritually elevate
+                        and embody with the divine beauty.</p>
                     </div>
                   </div>
                 </div>
@@ -182,7 +205,7 @@
     <div class="section-spacing">
       <div class="client-section">
         <div class="theme-title-one text-center">
-          <h6 class="upper-title">Testimonials</h6>
+          <h6 class="upper-title">Reviews</h6>
           <h2 class="main-title">What Our Students <br>Are Saying!!</h2>
         </div>
         <div class="wrapper">
@@ -193,7 +216,7 @@
                   <div class="text-wrapper">
                     <p>{{bioDesc.faculty1shortDesc}}</p>
                     <!-- <img src="../../../assets/images/home/3.jpg" alt=""> -->
-                    <h6>Nrityavisharad Shraddha Phdatare</h6>
+                    <h6>Shraddha Phadtare</h6>
                     <span>Student</span>
                   </div>
                 </div>
