--- a/src/app/pages/our-class/our-class.component.html
+++ b/src/app/pages/our-class/our-class.component.html
@@ -18,11 +18,11 @@
             <div class="img-box"><img src="../../../assets/images/SNM Tihai workshop/20180908_173729.jpg" alt=""></div>
             <div class="text">
               <ul class="clearfix">
-                <li><i class="fa fa-calendar" aria-hidden="true"></i> October 20, 2018</li>
+                <li><i class="fa fa-calendar" aria-hidden="true"></i>September, 2006</li>
                 <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4 pm - 9 pm </li>
               </ul>
               <h6><a href="class-details.html">Dombivli Class</a></h6>
-              <p>Classes are designed for girls aged 6 years and above. All our mentors are highly qualified and are teaching since last 10 years.</p>
+              <p>Classes are designed for girls aged 6 years and above. All our mentors are highly qualified and are teaching since last 15 years.</p>
               <!-- <a href="class-details.html" class="theme-button-two">Explore more <span></span></a> -->
             </div>
           </div> 
@@ -32,11 +32,11 @@
             <div class="img-box"><img src="../../../assets/images/SNM Tihai workshop/20180908_204848.jpg" alt=""></div>
             <div class="text">
               <ul class="clearfix">
-                <li><i class="fa fa-calendar" aria-hidden="true"></i> October 20, 2018</li>
+                <li><i class="fa fa-calendar" aria-hidden="true"></i>May, 2014</li>
                 <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4 pm - 9 pm </li>
               </ul>
               <h6><a href="class-details.html">Sanpada Class</a></h6>
-              <p>Classes are designed for girls aged 6 years and above. All our mentors are highly qualified and are teaching since last 10 years. </p>
+              <p>Classes are designed for girls aged 6 years and above. All our mentors are highly qualified and are teaching since last 6 years. </p>
               <!-- <a href="class-details.html" class="theme-button-two">Explore more <span></span></a> -->
             </div>
           </div> 
@@ -46,11 +46,11 @@
             <div class="img-box"><img src="../../../assets/images/SNM Tihai workshop/20180908_205125.jpg" alt=""></div>
             <div class="text">
               <ul class="clearfix">
-                <li><i class="fa fa-calendar" aria-hidden="true"></i> October 20, 2018</li>
+                <li><i class="fa fa-calendar" aria-hidden="true"></i> March, 2019</li>
                 <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4 pm - 9 pm </li>
               </ul>
               <h6><a href="class-details.html">Koperkhairne Class</a></h6>
-              <p>Classes are designed for girls aged 6 years and above. All our mentors are highly qualified and are teaching since last 10 years. </p>
+              <p>Classes are designed for girls aged 6 years and above. All our mentors are highly qualified and are teaching since last 2 years. </p>
               <!-- <a href="class-details.html" class="theme-button-two">Explore more <span></span></a> -->
             </div>
           </div> 
