--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -1,7 +1,7 @@
 <div class="main-page-wrapper">
 
   <div class="theme-inner-banner">
-     <img style="width: 100%;height: 50rem;" src="../../../assets/images/Nrityavilay/RAJ_5811.JPG" alt="" class="bg-shape"> 
+     <img style="width: 100%;" src="../../../assets/images/Nrityavilay/RAJ_5811.JPG" alt="" class="bg-shape"> 
     <!-- <img src="../../../assets/images/shape/13.png" alt="" class="bg-shape">
     <img src="../../../assets/images/shape/14.png" alt="" class="shape-one">
     <img src="../../../assets/images/shape/15.png" alt="" class="shape-two">
@@ -20,12 +20,12 @@
               <div class="text-wrapper">
                 <img src="../../../assets/images/shape/25.png" alt="" class="shape-one">
                 <div class="theme-title-one">
-                  <h2 class="main-title">Guru Purnima</h2>
+                  <h2 class="main-title">Guru Pournima</h2>
                 </div>
                 <p>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
                   auctor.</p>
-                <div class="date">/ 23 July 2021</div>
-                <a href="#" class="button-one">View More</a>
+                <div class="date">23 July 2021</div>
+                <!-- <a href="#" class="button-one">View More</a> -->
                 <!-- New Added -->
                 <div id="count" class="clearfix row">
                   <div class="col-3">
@@ -51,7 +51,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 order-lg-first"><img style="height: 667px;width: 441px;" src="../../../assets/images/Nrutyanaad/DSC_8357.jpg" alt=""
+            <div class="col-lg-6 order-lg-first"><img style="height: 667px;width: 441px;" src="../../../assets/images/Shraddha_Bhide/DSC_0430.JPG" alt=""
                 class="event-img"></div>
           </div>
         </div>
