--- a/src/app/pages/faculty/faculty.component.html
+++ b/src/app/pages/faculty/faculty.component.html
@@ -1,7 +1,7 @@
 <div class="main-page-wrapper">
 
   <div class="theme-inner-banner" style="background-size: cover;">
-    <img style="width: 100%;height: 50rem;" src="../../../assets/images/Krishnamahima sanpada/ER4A0537.JPG" alt="" class="bg-shape">
+    <img style="width: 100%;" src="../../../assets/images/Nrutyanaad/DSC_8928.jpg" alt="" class="bg-shape">
     <div class="container">
       <h2 class="title text-white">Faculty</h2>
     </div>
@@ -119,16 +119,16 @@
             <div class="single-team-member">
               <div class="img-box" (click)="scroll(item1)">
                 <img src="../../../assets/images/SNM faculties/Divya Saraf.jpg" alt="">
-                <ul>
+                <!-- <ul>
                   <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                </ul>
+                </ul> -->
               </div>
               <div class="text">
                 <h6>Ms. Divya Saraf</h6>
-                <p>Dance MANAGER</p>
+                <p>Mentor</p>
               </div>
             </div>
           </div>
@@ -152,16 +152,16 @@
             <div class="single-team-member">
               <div class="img-box" (click)="scroll(item1)">
                 <img src="../../../assets/images/SNM faculties/Amruta Joshi.jpg" alt="">
-                <ul>
+                <!-- <ul>
                   <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                </ul>
+                </ul> -->
               </div>
               <div class="text">
                 <h6>Ms. Amruta Joshi</h6>
-                <p>Dance MANAGER</p>
+                <p>Mentor</p>
               </div>
             </div>
           </div>
@@ -185,16 +185,16 @@
             <div class="single-team-member">
               <div class="img-box" (click)="scroll(item1)">
                 <img src="../../../assets/images/SNM faculties/Rashmi Pol.jpg" alt="">
-                <ul>
+                <!-- <ul>
                   <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                </ul>
+                </ul> -->
               </div>
               <div class="text">
                 <h6>Ms. Rashmi Pol</h6>
-                <p>Dance MANAGER</p>
+                <p>Mentor</p>
               </div>
             </div>
           </div>
@@ -218,16 +218,16 @@
             <div class="single-team-member">
               <div class="img-box" (click)="scroll(item1)">
                 <img src="../../../assets/images/SNM faculties/Ashwarya Chodnekar.JPG" alt="">
-                <ul>
+                <!-- <ul>
                   <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                </ul>
+                </ul> -->
               </div>
               <div class="text">
                 <h6>Ms. Aishwarya Chodnekar</h6>
-                <p>Dance MANAGER</p>
+                <p>Mentor</p>
               </div>
             </div>
           </div>
