--- a/src/app/pages/founder/founder.component.html
+++ b/src/app/pages/founder/founder.component.html
@@ -2,7 +2,7 @@
 
 
   <div class="theme-inner-banner" style="background-size: cover;">
-    <img style="width: 100%;" src="../../../assets/images/Shraddha_Bhide/DSC_8375.jpg" alt="" class="bg-shape">
+    <img style="width: 100%;" src="../../../assets/images/Shraddha_Bhide/Z89A8466.JPG" alt="" class="bg-shape">
     <div class="container">
       <h2 class="title text-white">Founder</h2>
     </div>
