--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -8,12 +8,12 @@
           <div class="col-lg-8">
             <h2>Be in the know with the latest update from <span>SNM</span></h2>
           </div>
-          <div class="col-lg-4">
+          <!-- <div class="col-lg-4">
             <form action="#">
               <input type="email" placeholder="Enter your e-mail">
               <button><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
             </form>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
