--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -2,7 +2,7 @@
   <header class="theme-main-menu clearfix" [ngClass]="{
       'dark-color':isLogin == false
     }">
-    <div class="logo"><a routerLink="/home"><img style="height: 50px;" src='../../../../assets/images/logo/logo1.svg' alt=""></a></div>
+    <div class="logo"><a routerLink="/home"><img style="height: 50px;" src='../../../../assets/images/logo/logo-with-name-i10-_Converted_-_2_.svg' alt=""></a></div>
 
     <div class="right-widget">
       <ul class="clearfix">
@@ -27,7 +27,7 @@
           <li><a routerLink="/home" class="nav-item nav-link active">Home</a></li>
           <li><a routerLink="/founder" class="nav-item nav-link active">Founder</a></li>
           <li><a routerLink="/faculty" class="nav-item nav-link active">Faculty</a></li>
-          <li><a routerLink="/event" class="nav-item nav-link active">Events</a></li>
+          <!-- <li><a routerLink="/event" class="nav-item nav-link active">Events</a></li> -->
           <!-- <li>
             <div class="nav-item dropdown">
               <a href="#" class="nav-link dropdown-toggle anchor-style" data-toggle="dropdown">Our
