--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -11,7 +11,7 @@
     <!-- <img src="../../../assets/images/shape/14.png" alt="" class="shape-one">
     <img src="../../../assets/images/shape/15.png" alt="" class="shape-two">
     <img src="../../../assets/images/shape/16.png" alt="" class="shape-three"> -->
-    <div class="container">
+    <div class="container" style="margin-left: 79px;">
       <h2 class="title text-white">Contact</h2>
     </div>
   </div>
@@ -31,10 +31,10 @@
                     <input type="email" placeholder="Your Email *" name="email" formControlName="email">
                   </div>
                   <div class="col-12">
-                    <input type="tel" placeholder="contact" name="contact" formControlName="contact">
+                    <input type="tel" placeholder="Contact *" name="contact" formControlName="contact">
                   </div>
                 </div>
-                <textarea placeholder="Type your message" name="message" formControlName="message"></textarea>
+                <textarea placeholder="Type your message *" name="message" formControlName="message"></textarea>
                 <button [disabled]="!contactForm.valid" type="submit">Submit Request</button>
               </form>
             <!-- <div class="col-lg-3 col-md-4">
@@ -62,9 +62,9 @@
               </li>
               <li>
                 <i class="fa fa-phone" aria-hidden="true"></i>
-                <h6>+91 9892956110</h6>
-                <p>Monday–Saturday 4pm-9pm</p>
-              </li>
+                <p>+91 9892956110</p>
+                <p>+91 7045771821</p>                
+              </li>              
               <li>
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <h6>Address 1</h6>
