--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,15 +6,17 @@
         <div class="camera_caption">
           <div class="container">
             <h1 class="wow fadeInUp animated">Siddhi Nrityakala Mandir</h1>
-            <p class="wow fadeInUp animated" data-wow-delay="0.5s">Nrityalankar Mrs. Shraddha Bhide started
-              her incredible journey of the Kathak art
-              form at the tender age of 8 years under the able guidance and mentorship of
-              Guru Sangeetacharya Mrs. Vaishali Dudhe. She has been a consistent and
-              dedicated learner over the years. Her commitment to the art form is a benchmark
-              for the fellow students.</p>
+            <p class="wow fadeInUp animated" data-wow-delay="0.5s">
+              Our mission is to inspire each individual and instill an appreaciation and love for the beautiful art of
+              DANCE as well as the joy of performance.
+              Siddhi Nrityakala Mandir specialises in KATHAK which is an ancient classical dance form. SNM mentors not
+              only prepare students technically to excel the prestigious Akhil Bhartiya Gandharva Mahavidyala
+              examinations
+              but also prepare them for various competitions and programs.
+            </p>
 
-            <!-- <a href="#" class="read-more wow fadeInLeft animated" data-wow-delay="0.8s">Read More
-              <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span></a> -->
+            <a routerLink="/readMore" class="read-more wow fadeInLeft animated" data-wow-delay="0.8s">Read More
+              <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span></a>
 
           </div>
         </div>
@@ -77,59 +79,12 @@
       </div>
     </div> -->
 
-    <div class="section-spacing about-us">
-      <img src="../../../assets/images/shape/3.png" alt="" class="shape-two">
-      <div class="main-container clearfix">
-        <div class="inner-container left-content">
-          <img src="../../../assets/images/shape/2.png" alt="" class="shape" data-aos="zoom-in-up"
-            data-aos-duration="1000" data-aos-delay="150">
-          <div class="inner-col">
-            <div class="img-box">
-              <div class="dot" data-aos="fade-up" data-aos-delay="150"></div>
-              <div class="dot" data-aos="fade-up" data-aos-delay="350"></div>
-              <div class="dot" data-aos="fade-up" data-aos-delay="550"></div>
-              <div class="dot" data-aos="fade-up" data-aos-delay="750"></div>
-              <img style="width: 657px;" src="../../../assets/images/murti/RAJ_5483.JPG" alt="">
-            </div>
-          </div>
-        </div>
-
-        <div class="inner-container right-content">
-          <div class="wrapper">
-            <div class="theme-title-one">
-              <h3 class="upper-title">Kathak</h3>
-              <!-- <h2 class="main-title">Join A Global Dance Community</h2> -->
-            </div>
-            <p class="h5">The classical Indian dance form of Kathak originated in the northern regions of the country
-              and is narrative in nature. The term 'Kathak' has been derived form the Sanskrit word 'Katha', which means
-              a story. “Katha kahe so Kathak kahalave”
-            </p><br>
-            <p class="h5">
-              “Kathak” literally means a storyteller. Kathaka is the name of the community of musicians and dancers.
-              These Kathakas wandered around the countryside narrating the mythological stories to the people through
-              dance, music and poetry; all these arts are very closely associated with each other. This act of
-              storytelling further established as an art form, which popularized as ‘Kathak.
-            </p><br>
-            <p class="h5"> Swift Pirouettes (Bhramaris), Vigorous footwork (Padanyas), elegant stances (Thaat), Graceful Gatnikas,
-              Descriptive Gatbhavas and innovative use of bhav in abhinaya characterize Kathak. The sharp yet fluid
-              movements synchronised with deft and brisk spins, unleashes a visual splendour onstage taking audiences on
-              a spiritual journey.
-            </p><br>
-            <p class="h5">
-              Vandana, Utaan, Thaat, Amad, Tode-tukade, Kavitta, Tihaai, Paran, Chakkardar, Gatnikas, Gatbhava, Tatkar,
-              Thumaries, Bhajans, Kajari, Hori, Tarana, Tilwat, Chaturang, Drupad, Ashtapadis are the components of
-              Kathak.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <div class="section-spacing">
       <div class="our-fact">
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
-              <h2 class="main-title">Last year we proved that we’re the best Dance Services </h2>
+              <h2 class="main-title">Proven legacy across 15 years</h2>
             </div>
             <div class="col-lg-6">
               <!-- <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt
@@ -143,28 +98,28 @@
                   <div class="col-sm-6">
                     <div class="single-counter-box">
                       <h2 class="number"><span class="timer" data-from="0" data-to="20" data-speed="1200"
-                          data-refresh-interval="5">15</span>+</h2>
-                      <p>Certified Trainer</p>
+                          data-refresh-interval="5">8</span>+</h2>
+                      <p>Certified Trainers</p>
                     </div>
                   </div>
                   <div class="col-sm-6">
                     <div class="single-counter-box">
                       <h2 class="number"><span class="timer" data-from="0" data-to="1300" data-speed="1200"
                           data-refresh-interval="5">1000</span>+</h2>
-                      <p>Verified Happy Students</p>
+                      <p>Happy Students</p>
                     </div>
                   </div>
                   <div class="col-sm-6">
                     <div class="single-counter-box">
                       <h2 class="number"><span class="timer" data-from="0" data-to="150" data-speed="1200"
-                          data-refresh-interval="5">100</span>+</h2>
-                      <p>Awards Winner</p>
+                          data-refresh-interval="5">200</span>+</h2>
+                      <p>Award Winners</p>
                     </div>
                   </div>
                   <div class="col-sm-6">
                     <div class="single-counter-box">
                       <h2 class="number"><span class="timer" data-from="0" data-to="280" data-speed="1200"
-                          data-refresh-interval="5">100</span>+</h2>
+                          data-refresh-interval="5">500</span>+</h2>
                       <p>Performances</p>
                     </div>
                   </div>
@@ -179,19 +134,22 @@
                     <div>
                       <div class="icon"><i class="flaticon-007-ballet"></i></div>
                       <!-- <h6>Dance Schedule</h6> -->
-                      <p>The word Nataraja is a Sanskrit term, 
+                      <p>"The word Nataraja is a Sanskrit term,
                         from 'Nata' meaning act, drama, dance and 'Raja' meaning king, lord.
-                        It can be roughly translated as Lord of dance or King of dance.</p>
+                        It can be roughly translated as Lord of dance or King of dance."</p>
                     </div>
                   </div>
                   <div class="col-sm-6 strategy-block">
                     <div>
                       <div class="icon"><i class="flaticon-008-ballet-1"></i></div>
                       <!-- <h6>Professional dance</h6> -->
-                      <p>With the rythm of the ghungroos 
+                      <p>"With the rythm of the ghungroos
                         And the beat of the music
                         A dancer can spiritually elevate
-                        and embody with the divine beauty.</p>
+                        and embody with the divine beauty."
+                        <br>
+                        -Sai Thanmae
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -200,8 +158,41 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>    
+    <div class="container mt-5">
+      <h4 class="main-title mt-3 mb-3">Photos</h4>
+      <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-interval="150">
+            <img src="../../../assets/images/Nrityavilay/RAJ_6418.JPG" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-interval="150">
+            <img src="../../../assets/images/Nrityavilay/RAJ_6013.JPG" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-interval="150">
+            <img src="../../../assets/images/Nrutyanaad/DSC_8974.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-interval="150">
+            <img src="../../../assets/images/Nrutyanaad/DSC_8280.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-interval="150">
+            <img src="../../../assets/images/Nrutyanaad/DSC_8274.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-interval="150">
+            <img src="../../../assets/images/Nrutyanaad/DSC_8191.jpg" class="d-block w-100" alt="...">
+          </div>
 
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
     <div class="section-spacing">
       <div class="client-section">
         <div class="theme-title-one text-center">
@@ -246,8 +237,7 @@
         </div>
       </div>
     </div>
-
-    <div class="section-spacing">
+    <!-- <div class="section-spacing">
       <div class="our-team">
         <img src="../../../assets/images/shape/1.png" alt="" class="shape">
         <div class="container">
@@ -347,7 +337,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <app-whatsapp></app-whatsapp>
     <app-scrollToTop></app-scrollToTop>
