--- a/src/app/pages/our-class/our-class.component.html
+++ b/src/app/pages/our-class/our-class.component.html
@@ -5,7 +5,7 @@
     <!-- <img src="../../../assets/images/shape/14.png" alt="" class="shape-one">
     <img src="../../../assets/images/shape/15.png" alt="" class="shape-two">
     <img src="../../../assets/images/shape/16.png" alt="" class="shape-three"> -->
-    <div class="container">
+    <div class="container" style="margin-left: 79px;">
       <h2 class="title text-white">Our Class</h2>
     </div> 
   </div> 
@@ -15,51 +15,41 @@
       <div class="row">
         <div class="col-xl-4 col-lg-4 col-sm-4">
           <div class="single-block">
-            <div class="img-box"><img src="../../../assets/images/SNM Tihai workshop/20180908_173729.jpg" alt=""></div>
-            <div class="text">
-              <ul class="clearfix">
-                <li><i class="fa fa-calendar" aria-hidden="true"></i>September, 2006</li>
-                <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4 pm - 9 pm </li>
-              </ul>
-              <h6><a href="class-details.html">Dombivli Class</a></h6>
-              <p>Classes are designed for girls aged 6 years and above. All our mentors are highly qualified and are teaching since last 15 years.</p>
-              <!-- <a href="class-details.html" class="theme-button-two">Explore more <span></span></a> -->
-            </div>
+            <h6 class="mb-3">Dombivli Branch</h6>
+            <p class="mb-3">Established in the year 2006</p>
+            <div class="img-box"><img height="300px" src="../../../assets/images/SNM Ashtanayika workshop/dombivli.jpg" alt=""></div>
+           
           </div> 
         </div> 
         <div class="col-xl-4 col-lg-4 col-sm-4">
           <div class="single-block">
-            <div class="img-box"><img src="../../../assets/images/SNM Tihai workshop/20180908_204848.jpg" alt=""></div>
-            <div class="text">
+            <h6 class="mb-3">Sanpada Branch</h6>
+            <p class="mb-3">Established in the year 2014</p>
+            <div class="img-box"><img height="300px" src="../../../assets/images/SNM Ashtanayika workshop/sanpada.jpg" alt=""></div>
+            <!-- <div class="text">
               <ul class="clearfix">
                 <li><i class="fa fa-calendar" aria-hidden="true"></i>May, 2014</li>
                 <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4 pm - 9 pm </li>
               </ul>
-              <h6><a href="class-details.html">Sanpada Class</a></h6>
-              <p>Classes are designed for girls aged 6 years and above. All our mentors are highly qualified and are teaching since last 6 years. </p>
-              <!-- <a href="class-details.html" class="theme-button-two">Explore more <span></span></a> -->
-            </div>
+              <h6><a href="class-details.html">Sanpada Branch</a></h6>
+              <p>Classes are designed for girls aged 6 years and above. All our mentors are highly qualified and are teaching since last 6 years. </p> -->
+               <!-- <a href="class-details.html" class="theme-button-two">Explore more <span></span></a>
+            </div>  -->
           </div> 
         </div>  
         <div class="col-xl-4 col-lg-4 col-sm-4">
           <div class="single-block">
-            <div class="img-box"><img src="../../../assets/images/SNM Tihai workshop/20180908_205125.jpg" alt=""></div>
-            <div class="text">
-              <ul class="clearfix">
-                <li><i class="fa fa-calendar" aria-hidden="true"></i> March, 2019</li>
-                <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4 pm - 9 pm </li>
-              </ul>
-              <h6><a href="class-details.html">Koperkhairne Class</a></h6>
-              <p>Classes are designed for girls aged 6 years and above. All our mentors are highly qualified and are teaching since last 2 years. </p>
-              <!-- <a href="class-details.html" class="theme-button-two">Explore more <span></span></a> -->
-            </div>
+            <h6 class="mb-3">Koperkhairne Branch</h6>
+            <p class="mb-3">Established in the year 2019</p>
+            <div class="img-box"><img height="300px" src="../../../assets/images/SNM Tihai workshop/20180908_205125.jpg" alt=""></div>
+           
           </div> 
         </div>            
       </div> 
     </div> 
   </div> 
 
-  <div class="section-spacing mb-5">
+  <!-- <div class="section-spacing mb-5">
     <div class="who-can-attend">
       <div class="container">
         <div class="row">
@@ -78,7 +68,7 @@
         </div>
       </div>
     </div> 
-  </div>
+  </div> -->
 
   <!-- <div class="section-spacing section-spacing-bottom our-feature-one">
     <img src="../../../assets/images/shape/1.png" alt="" class="shape">
