--- a/src/app/pages/payment/payment.component.html
+++ b/src/app/pages/payment/payment.component.html
@@ -3,8 +3,10 @@
     <!-- <img src="../../../assets/images/shape/13.png" alt="" class="bg-shape"> -->
     <div class="container">
       <div class="payment_mode">
-        <h2 class="title">G-payment</h2>
+        <h2 class="title">QR Code</h2>
         <img height="100%" width="50%" src='../../../assets/images/payment.jpeg' alt="" srcset="">
+        <br><br>
+        <h5>UPI ID for Payment is shraddhad85-1@okicici</h5>
       </div>
     </div>
   </div>
