--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -5,8 +5,8 @@
     <!-- <img src="../../../assets/images/shape/14.png" alt="" class="shape-one">
     <img src="../../../assets/images/shape/15.png" alt="" class="shape-two">
     <img src="../../../assets/images/shape/16.png" alt="" class="shape-three"> -->
-    <div class="container">
-      <h2 class="title">Portfolio</h2>
+    <div class="container" style="margin-left: 79px;">
+      <h2 class="title text-white">Portfolio</h2>
     </div>
   </div>
 
