--- a/src/app/pages/faculty/faculty.component.html
+++ b/src/app/pages/faculty/faculty.component.html
@@ -1,8 +1,8 @@
 <div class="main-page-wrapper">
 
   <div class="theme-inner-banner" style="background-size: cover;">
-    <img style="width: 100%;" src="../../../assets/images/Nrutyanaad/DSC_8928.jpg" alt="" class="bg-shape">
-    <div class="container">
+    <img style="width: 100%;" src="../../../assets/images/SNM faculties/IMG_20210720_112019.jpg" alt="" class="bg-shape">
+    <div class="container" style="margin-left: 79px;">
       <h2 class="title text-white">Faculty</h2>
     </div>
   </div>
@@ -12,7 +12,7 @@
       <img src="../../../assets/images/shape/1.png" alt="" class="shape">
       <div class="container">
         <div class="theme-title-two">
-          <h2 class="main-title">Executive Team</h2>
+          <h2 class="main-title">SNM Faculty</h2>
           <p>All We Do Begins With Your Story and Ends With Your Success!</p>
           <a (click)="scroll(item1)" class="theme-button-two">See all members <span></span></a>
         </div>
@@ -26,16 +26,17 @@
                 <div class="single-team-member">
                   <div class="img-box" (click)="scroll(item1)">
                     <img style="width:370px;height: 400px;border-radius: 5px;background-position: center;background-size: cover;" src="../../../assets/images/SNM faculties/Divya Saraf.jpg" alt="">
-                    <ul>
+                    <!-- <ul>
                       <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    </ul>
+                    </ul> -->
                   </div>
                   <div class="text">
+                    <h6>Nrityavisharad</h6>
                     <h6>Ms. Divya Saraf</h6>
-                    <p>Kathak Expert</p>
+                    <p>Faculty</p>
                   </div>
                 </div>
               </div>
@@ -45,16 +46,12 @@
                 <div class="single-team-member">
                   <div class="img-box" (click)="scroll(item2)">
                     <img style="width:370px;height: 400px;border-radius: 5px;background-position: center;background-size: cover;" src="../../../assets/images/SNM faculties/InShot_20210614_144427554.jpg" alt="">
-                    <ul>
-                      <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    </ul>
+                  
                   </div>
                   <div class="text">
+                    <h6>Nrityavisharad</h6>
                     <h6>Ms. Amruta Joshi</h6>
-                    <p>Kathak Expert</p>
+                    <p>Faculty</p>
                   </div>
                 </div>
               </div>
@@ -64,16 +61,12 @@
                 <div class="single-team-member">
                   <div class="img-box" (click)="scroll(item3)">
                     <img style="width:370px;height: 400px;border-radius: 5px;background-position: center;background-size: cover;" src="../../../assets/images/SNM faculties/Rashmi Pol.jpg" alt="">
-                    <ul>
-                      <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    </ul>
+                   
                   </div>
                   <div class="text">
+                    <h6>Nrityavisharad</h6>
                     <h6>Ms. Rashmi Pol</h6>
-                    <p>Kathak Expert</p>
+                    <p>Faculty</p>
                   </div>
                 </div>
               </div>
@@ -83,16 +76,12 @@
                 <div class="single-team-member">
                   <div class="img-box" (click)="scroll(item3)">
                     <img style="width:370px;height: 400px;border-radius: 5px;background-position: center;background-size: cover;" src="../../../assets/images/SNM faculties/Ashwarya Chodnekar.JPG" alt="">
-                    <ul>
-                      <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
-                      <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    </ul>
+                   
                   </div>
                   <div class="text">
+                    <h6>Nrityavisharad</h6>
                     <h6>Ms. Aishwarya Chodnekar</h6>
-                    <p>Kathak Expert</p>
+                    <p>Faculty</p>
                   </div>
                 </div>
               </div>
@@ -118,7 +107,7 @@
 
             <div class="single-team-member">
               <div class="img-box" (click)="scroll(item1)">
-                <img src="../../../assets/images/SNM faculties/Divya Saraf.jpg" alt="">
+                <img height="" width="" src="../../../assets/images/SNM faculties/IMG_0516.jpg" alt="">
                 <!-- <ul>
                   <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
@@ -127,8 +116,8 @@
                 </ul> -->
               </div>
               <div class="text">
-                <h6>Ms. Divya Saraf</h6>
-                <p>Mentor</p>
+                <h6>Nrityavisharad Ms. Divya Saraf</h6>
+                <p>Faculty</p>
               </div>
             </div>
           </div>
@@ -160,8 +149,8 @@
                 </ul> -->
               </div>
               <div class="text">
-                <h6>Ms. Amruta Joshi</h6>
-                <p>Mentor</p>
+                <h6>Nrityavisharad Ms. Amruta Joshi</h6>
+                <p>Faculty</p>
               </div>
             </div>
           </div>
@@ -184,7 +173,7 @@
           <div class="item">
             <div class="single-team-member">
               <div class="img-box" (click)="scroll(item1)">
-                <img src="../../../assets/images/SNM faculties/Rashmi Pol.jpg" alt="">
+                <img src="../../../assets/images/SNM faculties/IMG_2259.JPG" alt="">
                 <!-- <ul>
                   <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
@@ -193,8 +182,8 @@
                 </ul> -->
               </div>
               <div class="text">
-                <h6>Ms. Rashmi Pol</h6>
-                <p>Mentor</p>
+                <h6>Nrityavisharad Ms. Rashmi Pol</h6>
+                <p>Faculty</p>
               </div>
             </div>
           </div>
@@ -226,8 +215,8 @@
                 </ul> -->
               </div>
               <div class="text">
-                <h6>Ms. Aishwarya Chodnekar</h6>
-                <p>Mentor</p>
+                <h6>Nrityavisharad Ms. Aishwarya Chodnekar</h6>
+                <p>Faculty</p>
               </div>
             </div>
           </div>
