--- a/src/app/pages/founder/founder.component.html
+++ b/src/app/pages/founder/founder.component.html
@@ -1,14 +1,42 @@
 <div class="main-page-wrapper">
 
 
-  <div class="theme-inner-banner" style="background-size: cover;">
-    <img style="width: 100%;" src="../../../assets/images/Shraddha_Bhide/Z89A8466.JPG" alt="" class="bg-shape">
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img height="1000px" width="1500px" src="../../../assets/images/Shraddha_Bhide/DSC_0016.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img  height="1000px" width="1500px" src="../../../assets/images/Shraddha_Bhide/IMG_1321.JPG" class="d-block w-100" >
+      </div>     
+      <div class="carousel-item">
+        <img height="1000px" src="../../../assets/images/Shraddha_Bhide/s3.jpg" class="d-block w-100">
+      </div> 
+      <div class="carousel-item ">
+        <img height="1000px" src="../../../assets/images/Shraddha_Bhide/DSC_0017.jpg" class="d-block w-100">
+      </div>   
+      <div class="carousel-item ">
+        <img height="1000px" src="../../../assets/images/Shraddha_Bhide/DSC_3554.jpg" class="d-block w-100">
+      </div>       
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <!-- <div class="theme-inner-banner" style="background-size: cover;">
+    <img style="width: 100%;" src="../../../assets/images/Shraddha_Bhide/DSC_8375.jpg" alt="" class="bg-shape">
     <div class="container">
       <h2 class="title text-white">Founder</h2>
     </div>
-  </div>
+  </div> -->
 
-  <div class="section-spacing section-spacing-bottom" style="background:grey;">
+  <div class="section-spacing section-spacing-bottom" style="background:grey;">  
+
     <div class="portfolio-section">
       <div class="container bg-dark text-white rounded">
         <!-- <h1 class="pt-5 pl-5 text-white">Founder</h1> -->
@@ -102,6 +130,8 @@
         </div>
       </div>
     </div>
+
+  
   </div>
 
   <app-whatsapp></app-whatsapp>
