--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -2,7 +2,7 @@
   <header class="theme-main-menu clearfix" [ngClass]="{
       'dark-color':isLogin == false
     }">
-    <div class="logo"><a routerLink="/home"><img style="height: 50px;" src='../../../../assets/images/logo/logo-with-name-i10-_Converted_-_2_.svg' alt=""></a></div>
+    <div class="logo"><a routerLink="/home"><img class="header_logo" src='../../../../assets/images/logo/logo-with-name-i10-_Converted_-_2_.svg' alt=""></a></div>
 
     <div class="right-widget">
       <ul class="clearfix">
