--- a/src/app/pages/faculty/faculty.component.html
+++ b/src/app/pages/faculty/faculty.component.html
@@ -206,7 +206,7 @@
           <div class="item">
             <div class="single-team-member">
               <div class="img-box" (click)="scroll(item1)">
-                <img src="../../../assets/images/SNM faculties/Ashwarya Chodnekar.JPG" alt="">
+                <img src="../../../assets/images/SNM faculties/ash.JPGs" alt="">
                 <!-- <ul>
                   <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
