--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -164,13 +164,13 @@
       <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-interval="150">
-            <img src="../../../assets/images/Nrityavilay/RAJ_6418.JPG" class="d-block w-100" alt="...">
+            <img src="../../../assets/images/Nrutyanaad/DSC_8065.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-interval="150">
-            <img src="../../../assets/images/Nrityavilay/RAJ_6013.JPG" class="d-block w-100" alt="...">
+            <img src="../../../assets/images/Nrutyanaad/DSC_8037.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-interval="150">
-            <img src="../../../assets/images/Nrutyanaad/DSC_8974.jpg" class="d-block w-100" alt="...">
+            <img src="../../../assets/images/Krishnamahima sanpada/ER4A9575.JPG" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item" data-interval="150">
             <img src="../../../assets/images/Nrutyanaad/DSC_8280.jpg" class="d-block w-100" alt="...">
@@ -181,7 +181,12 @@
           <div class="carousel-item" data-interval="150">
             <img src="../../../assets/images/Nrutyanaad/DSC_8191.jpg" class="d-block w-100" alt="...">
           </div>
-
+          <div class="carousel-item" data-interval="150">
+            <img src="../../../assets/images/Nrutyanaad/DSC_8671.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-interval="150">
+            <img src="../../../assets/images/Nrityavilay/RAJ_5487.JPG" class="d-block w-100" alt="...">
+          </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
