--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -24,9 +24,9 @@
             <a href="index.html" class="logo"><img style="height: 50px;" src='../../../../assets/images/logo/logo1.svg' alt=""></a>
             <p>Join Dancers Around The World Learning On SNM, Start Improving your dance skills today. </p>
             <ul>
-              <li><a href="https://www.facebook.com/SiddhiNrityakala/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-              <li><a href="https://www.youtube.com/channel/UCH_xxYdFQLuJIf-HhZzSfPg"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>              
-              <li><a href="https://instagram.com/siddhi_nrityakala_mandir?utm_medium=copy_link"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+              <li><a target="blank" href="https://www.facebook.com/SiddhiNrityakala/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+              <li><a target="blank" href="https://www.youtube.com/channel/UCH_xxYdFQLuJIf-HhZzSfPg"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>              
+              <li><a target="blank" href="https://instagram.com/siddhi_nrityakala_mandir?utm_medium=copy_link"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
             </ul>
           </div>
           <div class="col-xl-3 col-lg-3 col-sm-6 col-12 footer-news">
